tests/iele/danse/ill-formed/duplicateFuncs.iele
contract test {
  define public @test() {
    %ret = 100
    ret void
  }

  define public @test() {
    %ret = 200
    ret void
  }

  define @init() {}
}
